<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_admin" tools:context=".AdminActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/path"
        android:id="@+id/editText" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flight_csv"
        android:id="@+id/loadFlights"
        android:onClick="uploadFlights"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_csv"
        android:id="@+id/loadUsers"
        android:onClick="uploadUsers"
        android:layout_below="@+id/editText"
        android:layout_alignEnd="@+id/editText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText3"
        android:hint="@string/username"
        android:layout_below="@+id/loadFlights"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/searchClient" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_client"
        android:id="@+id/searchClient"
        android:onClick="searchClient"
        android:layout_below="@+id/editText3"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/searchIt" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_itinerary_or_flight"
        android:id="@+id/searchIt"
        android:onClick="searchItineraries"
        android:layout_below="@+id/searchFlight"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_book"
        android:id="@+id/showBooking"
        android:onClick="showBookings"
        android:layout_below="@+id/searchIt"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/searchIt" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_info"
        android:id="@+id/showInfo"
        android:onClick="showInfos"
        android:layout_below="@+id/showBooking"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/showBooking" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_flight_edit"
        android:id="@+id/searchFlight"
        android:onClick="searchFlights"
        android:layout_below="@+id/searchClient"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/searchClient" />

</RelativeLayout>
