<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_searchit_ineraries_to_book"
    tools:context=".SearchItineryToBookActivity">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/place"
        android:hint="@string/origin"
        android:text="London"
        android:layout_below="@+id/date"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/destination"
        android:hint="@string/destination"
        android:text="Rome"
        android:layout_below="@+id/place"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView3" />

    TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/depart_date"
        android:id="@+id/flightNumber"
        android:gravity="center_vertical"
        android:layout_alignTop="@+id/textView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/origin"
        android:id="@+id/textView2"
        android:gravity="center_vertical"
        android:layout_below="@+id/date"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/place"
        android:layout_alignEnd="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/destination"
        android:id="@+id/textView3"
        android:gravity="center_vertical"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/destination"
        android:layout_alignEnd="@+id/searchFlight" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_it"
        android:id="@+id/search"
        android:onClick="searchItineraries"
        android:layout_alignTop="@+id/searchFlight"
        android:layout_alignParentEnd="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_flight"
        android:id="@+id/searchFlight"
        android:onClick="searchFlights"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:hint="@string/depart_date"
        android:onClick="datePicker"
        android:clickable="true"
        android:id="@+id/date"
        android:gravity="center"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />



</RelativeLayout>
