<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity"
    android:background="@drawable/a"
    >


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:ems="10"
        android:id="@+id/username"
        android:hint="@string/username"
        android:alpha="0.75"
        android:background="@color/black"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:singleLine="true"
        android:text="admin@gmail.com"
        android:layout_marginTop="175dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:ems="10"
        android:alpha="0.75"
        android:background="@color/black"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:singleLine="true"
        android:id="@+id/password"
        android:hint="@string/password"
        android:text="password"
        android:layout_marginTop="210dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login"
        android:onClick="login"

        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true" />



</RelativeLayout>
