<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cs.b07.p3.SearchFlightToEditActivity"
    tools:showIn="@layout/activity_search_flight_to_edit">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/place"
        android:hint="@string/origin"
        android:text="London"
        android:layout_below="@+id/date"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/searchFlight" /><![CDATA[

    TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="@string/depart_date"
    android:id="@+id/flightNumber"
    android:gravity="center_vertical"
    android:layout_alignTop="@+id/textView"
    android:layout_alignParentStart="true" />

    ]]>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/origin"
        android:id="@+id/textView2"
        android:gravity="center_vertical"
        android:layout_below="@+id/date"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/place"
        android:layout_toStartOf="@+id/searchFlight" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_flight"
        android:id="@+id/searchFlight"
        android:onClick="searchFlights"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:hint="@string/depart_date"
        android:onClick="datePicker"
        android:clickable="true"
        android:id="@+id/date"
        android:gravity="center"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_below="@+id/searchFlight"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
